--- a/travlya.html
+++ b/travlya.html
@@ -2,41 +2,41 @@
 <HEAD> 
 <body bgcolor=#ccffcc>
 
-<font size=5>
+<font size=5 face="Verdana">
 <i>
-<font color=#ff0011><p align=center><b>ТРАВЛЯ В ИНТЕРНЕТЕ: ЧТО ДЕЛАТЬ?</b></font></p>
-<a href="main.html" target="майн" >назад</a></i>
+<font color=#ff0011><p align=center><b>РўР РђР’Р›РЇ Р’ РРќРўР•Р РќР•РўР•: Р§РўРћ Р”Р•Р›РђРўР¬?</b></font></p>
+<a href="main.html" target="РјР°Р№РЅ" >РЅР°Р·Р°Рґ</a></i>
 <p align=justify>
 <br>
-<b><i><font color=#0011ff>Травля в Интернете (кибербуллинг) </b></i></font>– это ситуация, когда посредством
-использования электронных устройств ребенок или несовершеннолетнее
-лицо подвергается издевательствам с целью причинения социального,
-психологического или даже физического вреда. Для детей и подростков их
-образ в Интернете – один из ключевых компонентов представления о себе
-и того, как они общаются с другими, поэтому травля в Интернете может
-иметь катастрофические последствия для их психологического здоровья и
-благополучия.
+<b><i><font color=#0011ff>РўСЂР°РІР»СЏ РІ РРЅС‚РµСЂРЅРµС‚Рµ (РєРёР±РµСЂР±СѓР»Р»РёРЅРі) </b></i></font>вЂ“ СЌС‚Рѕ СЃРёС‚СѓР°С†РёСЏ, РєРѕРіРґР° РїРѕСЃСЂРµРґСЃС‚РІРѕРј
+РёСЃРїРѕР»СЊР·РѕРІР°РЅРёСЏ СЌР»РµРєС‚СЂРѕРЅРЅС‹С… СѓСЃС‚СЂРѕР№СЃС‚РІ СЂРµР±РµРЅРѕРє РёР»Рё РЅРµСЃРѕРІРµСЂС€РµРЅРЅРѕР»РµС‚РЅРµРµ
+Р»РёС†Рѕ РїРѕРґРІРµСЂРіР°РµС‚СЃСЏ РёР·РґРµРІР°С‚РµР»СЊСЃС‚РІР°Рј СЃ С†РµР»СЊСЋ РїСЂРёС‡РёРЅРµРЅРёСЏ СЃРѕС†РёР°Р»СЊРЅРѕРіРѕ,
+РїСЃРёС…РѕР»РѕРіРёС‡РµСЃРєРѕРіРѕ РёР»Рё РґР°Р¶Рµ С„РёР·РёС‡РµСЃРєРѕРіРѕ РІСЂРµРґР°. Р”Р»СЏ РґРµС‚РµР№ Рё РїРѕРґСЂРѕСЃС‚РєРѕРІ РёС…
+РѕР±СЂР°Р· РІ РРЅС‚РµСЂРЅРµС‚Рµ вЂ“ РѕРґРёРЅ РёР· РєР»СЋС‡РµРІС‹С… РєРѕРјРїРѕРЅРµРЅС‚РѕРІ РїСЂРµРґСЃС‚Р°РІР»РµРЅРёСЏ Рѕ СЃРµР±Рµ
+Рё С‚РѕРіРѕ, РєР°Рє РѕРЅРё РѕР±С‰Р°СЋС‚СЃСЏ СЃ РґСЂСѓРіРёРјРё, РїРѕСЌС‚РѕРјСѓ С‚СЂР°РІР»СЏ РІ РРЅС‚РµСЂРЅРµС‚Рµ РјРѕР¶РµС‚
+РёРјРµС‚СЊ РєР°С‚Р°СЃС‚СЂРѕС„РёС‡РµСЃРєРёРµ РїРѕСЃР»РµРґСЃС‚РІРёСЏ РґР»СЏ РёС… РїСЃРёС…РѕР»РѕРіРёС‡РµСЃРєРѕРіРѕ Р·РґРѕСЂРѕРІСЊСЏ Рё
+Р±Р»Р°РіРѕРїРѕР»СѓС‡РёСЏ.
 <br>
-Основные советы по борьбе с кибербуллингом:
+РћСЃРЅРѕРІРЅС‹Рµ СЃРѕРІРµС‚С‹ РїРѕ Р±РѕСЂСЊР±Рµ СЃ РєРёР±РµСЂР±СѓР»Р»РёРЅРіРѕРј:
 <br>
-1.    Не бросайся в бой. Лучший способ: посоветоваться как себя вести и, если нет того, к кому можно обратиться, то вначале успокоиться. Если ты начнешь отвечать оскорблениями на оскорбления, то только еще больше разожжешь конфликт;
+1.    РќРµ Р±СЂРѕСЃР°Р№СЃСЏ РІ Р±РѕР№. Р›СѓС‡С€РёР№ СЃРїРѕСЃРѕР±: РїРѕСЃРѕРІРµС‚РѕРІР°С‚СЊСЃСЏ РєР°Рє СЃРµР±СЏ РІРµСЃС‚Рё Рё, РµСЃР»Рё РЅРµС‚ С‚РѕРіРѕ, Рє РєРѕРјСѓ РјРѕР¶РЅРѕ РѕР±СЂР°С‚РёС‚СЊСЃСЏ, С‚Рѕ РІРЅР°С‡Р°Р»Рµ СѓСЃРїРѕРєРѕРёС‚СЊСЃСЏ. Р•СЃР»Рё С‚С‹ РЅР°С‡РЅРµС€СЊ РѕС‚РІРµС‡Р°С‚СЊ РѕСЃРєРѕСЂР±Р»РµРЅРёСЏРјРё РЅР° РѕСЃРєРѕСЂР±Р»РµРЅРёСЏ, С‚Рѕ С‚РѕР»СЊРєРѕ РµС‰Рµ Р±РѕР»СЊС€Рµ СЂР°Р·РѕР¶Р¶РµС€СЊ РєРѕРЅС„Р»РёРєС‚;
 <br>
-2.    Управляй своей киберрепутацией;
+2.    РЈРїСЂР°РІР»СЏР№ СЃРІРѕРµР№ РєРёР±РµСЂСЂРµРїСѓС‚Р°С†РёРµР№;
 <br>
-3.    Анонимность в сети мнимая. Существуют способы выяснить, кто стоит за анонимным аккаунтом;
+3.    РђРЅРѕРЅРёРјРЅРѕСЃС‚СЊ РІ СЃРµС‚Рё РјРЅРёРјР°СЏ. РЎСѓС‰РµСЃС‚РІСѓСЋС‚ СЃРїРѕСЃРѕР±С‹ РІС‹СЏСЃРЅРёС‚СЊ, РєС‚Рѕ СЃС‚РѕРёС‚ Р·Р° Р°РЅРѕРЅРёРјРЅС‹Рј Р°РєРєР°СѓРЅС‚РѕРј;
 <br>
-4.    Не стоит вести хулиганский образ виртуальной жизни. Интернет фиксирует все твои действия и сохраняет их. Удалить их будет крайне затруднительно;
+4.    РќРµ СЃС‚РѕРёС‚ РІРµСЃС‚Рё С…СѓР»РёРіР°РЅСЃРєРёР№ РѕР±СЂР°Р· РІРёСЂС‚СѓР°Р»СЊРЅРѕР№ Р¶РёР·РЅРё. РРЅС‚РµСЂРЅРµС‚ С„РёРєСЃРёСЂСѓРµС‚ РІСЃРµ С‚РІРѕРё РґРµР№СЃС‚РІРёСЏ Рё СЃРѕС…СЂР°РЅСЏРµС‚ РёС…. РЈРґР°Р»РёС‚СЊ РёС… Р±СѓРґРµС‚ РєСЂР°Р№РЅРµ Р·Р°С‚СЂСѓРґРЅРёС‚РµР»СЊРЅРѕ;
 <br>
-5.    Веди себя вежливо;
+5.    Р’РµРґРё СЃРµР±СЏ РІРµР¶Р»РёРІРѕ;
 <br>
-6.    Игнорируй единичный негатив. Одноразовые оскорбительные сообщения лучше игнорировать. Обычно агрессия прекращается на начальной стадии;
+6.    РРіРЅРѕСЂРёСЂСѓР№ РµРґРёРЅРёС‡РЅС‹Р№ РЅРµРіР°С‚РёРІ. РћРґРЅРѕСЂР°Р·РѕРІС‹Рµ РѕСЃРєРѕСЂР±РёС‚РµР»СЊРЅС‹Рµ СЃРѕРѕР±С‰РµРЅРёСЏ Р»СѓС‡С€Рµ РёРіРЅРѕСЂРёСЂРѕРІР°С‚СЊ. РћР±С‹С‡РЅРѕ Р°РіСЂРµСЃСЃРёСЏ РїСЂРµРєСЂР°С‰Р°РµС‚СЃСЏ РЅР° РЅР°С‡Р°Р»СЊРЅРѕР№ СЃС‚Р°РґРёРё;
 <br>
-7.    Бан агрессора. В программах обмена мгновенными сообщениями, в социальных сетях есть возможность блокировки отправки сообщений с определенных адресов;
+7.    Р‘Р°РЅ Р°РіСЂРµСЃСЃРѕСЂР°. Р’ РїСЂРѕРіСЂР°РјРјР°С… РѕР±РјРµРЅР° РјРіРЅРѕРІРµРЅРЅС‹РјРё СЃРѕРѕР±С‰РµРЅРёСЏРјРё, РІ СЃРѕС†РёР°Р»СЊРЅС‹С… СЃРµС‚СЏС… РµСЃС‚СЊ РІРѕР·РјРѕР¶РЅРѕСЃС‚СЊ Р±Р»РѕРєРёСЂРѕРІРєРё РѕС‚РїСЂР°РІРєРё СЃРѕРѕР±С‰РµРЅРёР№ СЃ РѕРїСЂРµРґРµР»РµРЅРЅС‹С… Р°РґСЂРµСЃРѕРІ;
 <br>
-8.    Если ты свидетель кибербуллинга. Твои действия: выступить против преследователя, показать ему, что его действия оцениваются негативно, поддержать жертву, которой нужна психологическая помощь, сообщить взрослым о факте агрессивного поведения в сети.
+8.    Р•СЃР»Рё С‚С‹ СЃРІРёРґРµС‚РµР»СЊ РєРёР±РµСЂР±СѓР»Р»РёРЅРіР°. РўРІРѕРё РґРµР№СЃС‚РІРёСЏ: РІС‹СЃС‚СѓРїРёС‚СЊ РїСЂРѕС‚РёРІ РїСЂРµСЃР»РµРґРѕРІР°С‚РµР»СЏ, РїРѕРєР°Р·Р°С‚СЊ РµРјСѓ, С‡С‚Рѕ РµРіРѕ РґРµР№СЃС‚РІРёСЏ РѕС†РµРЅРёРІР°СЋС‚СЃСЏ РЅРµРіР°С‚РёРІРЅРѕ, РїРѕРґРґРµСЂР¶Р°С‚СЊ Р¶РµСЂС‚РІСѓ, РєРѕС‚РѕСЂРѕР№ РЅСѓР¶РЅР° РїСЃРёС…РѕР»РѕРіРёС‡РµСЃРєР°СЏ РїРѕРјРѕС‰СЊ, СЃРѕРѕР±С‰РёС‚СЊ РІР·СЂРѕСЃР»С‹Рј Рѕ С„Р°РєС‚Рµ Р°РіСЂРµСЃСЃРёРІРЅРѕРіРѕ РїРѕРІРµРґРµРЅРёСЏ РІ СЃРµС‚Рё.
 
 <br>
-<img src="травля.jpg">
+<img src="С‚СЂР°РІР»СЏ.jpg">
 
 
 
