--- a/verbovka.html
+++ b/verbovka.html
@@ -4,47 +4,47 @@
 <body bgcolor=#ccffcc>
 		
 
-<font size=5>
-<i><font color=#ff0011><p align=center><b>ВЕРБОВКА И ОТБОР ДЕТЕЙ
-В ДЕСТРУКТИВНЫЕ СООБЩЕСТВА
-В СОЦИАЛЬНЫХ СЕТЯХ</b></p></font>
-<a href="main.html" target="майн" >назад</a><l/i>
+<font size=5 face="Verdana">
+<i><font color=#ff0011><p align=center><b>Р’Р•Р Р‘РћР’РљРђ Р РћРўР‘РћР  Р”Р•РўР•Р™
+Р’ Р”Р•РЎРўР РЈРљРўРР’РќР«Р• РЎРћРћР‘Р©Р•РЎРўР’Рђ
+Р’ РЎРћР¦РРђР›Р¬РќР«РҐ РЎР•РўРЇРҐ</b></p></font>
+<a href="main.html" target="РјР°Р№РЅ" >РЅР°Р·Р°Рґ</a><l/i>
 <p align=justify>
 
 <br>
-Социальные сети являются самым эффективным и широким по охвату
-инструментом, с помощью которого злоумышленники могут вербовать
-пользователей в разные преступные организации. 
+РЎРѕС†РёР°Р»СЊРЅС‹Рµ СЃРµС‚Рё СЏРІР»СЏСЋС‚СЃСЏ СЃР°РјС‹Рј СЌС„С„РµРєС‚РёРІРЅС‹Рј Рё С€РёСЂРѕРєРёРј РїРѕ РѕС…РІР°С‚Сѓ
+РёРЅСЃС‚СЂСѓРјРµРЅС‚РѕРј, СЃ РїРѕРјРѕС‰СЊСЋ РєРѕС‚РѕСЂРѕРіРѕ Р·Р»РѕСѓРјС‹С€Р»РµРЅРЅРёРєРё РјРѕРіСѓС‚ РІРµСЂР±РѕРІР°С‚СЊ
+РїРѕР»СЊР·РѕРІР°С‚РµР»РµР№ РІ СЂР°Р·РЅС‹Рµ РїСЂРµСЃС‚СѓРїРЅС‹Рµ РѕСЂРіР°РЅРёР·Р°С†РёРё. 
 <br>
 <p align=center><b>
-К опасным сообществам в социальных сетях относятся:</b></p>
+Рљ РѕРїР°СЃРЅС‹Рј СЃРѕРѕР±С‰РµСЃС‚РІР°Рј РІ СЃРѕС†РёР°Р»СЊРЅС‹С… СЃРµС‚СЏС… РѕС‚РЅРѕСЃСЏС‚СЃСЏ:</b></p>
 <br>
-• Группы, пропагандирующие экстремистскую и нацистскую идеологию: террористические
-группировки, (в том числе движение «Колумбайн», признанное террористическим
-движением на основании решения Верховного суда РФ), шутеры, нацистские, неонацистские
-движения и др.
+вЂў Р“СЂСѓРїРїС‹, РїСЂРѕРїР°РіР°РЅРґРёСЂСѓСЋС‰РёРµ СЌРєСЃС‚СЂРµРјРёСЃС‚СЃРєСѓСЋ Рё РЅР°С†РёСЃС‚СЃРєСѓСЋ РёРґРµРѕР»РѕРіРёСЋ: С‚РµСЂСЂРѕСЂРёСЃС‚РёС‡РµСЃРєРёРµ
+РіСЂСѓРїРїРёСЂРѕРІРєРё, (РІ С‚РѕРј С‡РёСЃР»Рµ РґРІРёР¶РµРЅРёРµ В«РљРѕР»СѓРјР±Р°Р№РЅВ», РїСЂРёР·РЅР°РЅРЅРѕРµ С‚РµСЂСЂРѕСЂРёСЃС‚РёС‡РµСЃРєРёРј
+РґРІРёР¶РµРЅРёРµРј РЅР° РѕСЃРЅРѕРІР°РЅРёРё СЂРµС€РµРЅРёСЏ Р’РµСЂС…РѕРІРЅРѕРіРѕ СЃСѓРґР° Р Р¤), С€СѓС‚РµСЂС‹, РЅР°С†РёСЃС‚СЃРєРёРµ, РЅРµРѕРЅР°С†РёСЃС‚СЃРєРёРµ
+РґРІРёР¶РµРЅРёСЏ Рё РґСЂ.
 <br>
-• Группы и каналы, пропагандирующие опасные увлечения: зацепинг, опасные квесты, группы
-с пропагандой наркотиков, трэш-стримеры, шок-контент и др.
+вЂў Р“СЂСѓРїРїС‹ Рё РєР°РЅР°Р»С‹, РїСЂРѕРїР°РіР°РЅРґРёСЂСѓСЋС‰РёРµ РѕРїР°СЃРЅС‹Рµ СѓРІР»РµС‡РµРЅРёСЏ: Р·Р°С†РµРїРёРЅРі, РѕРїР°СЃРЅС‹Рµ РєРІРµСЃС‚С‹, РіСЂСѓРїРїС‹
+СЃ РїСЂРѕРїР°РіР°РЅРґРѕР№ РЅР°СЂРєРѕС‚РёРєРѕРІ, С‚СЂСЌС€-СЃС‚СЂРёРјРµСЂС‹, С€РѕРє-РєРѕРЅС‚РµРЅС‚ Рё РґСЂ.
 <br>
-• Группы, пропагандирующие причинение вреда себе или окружающим: селфхарм (буквально
-переводится как «вред себе»), пиплхейт (движение, пропагандирующее ненависть к людям),
-депрессивно-суицидальные группы («синий кит» и аналогичные), анорексию и др.
+вЂў Р“СЂСѓРїРїС‹, РїСЂРѕРїР°РіР°РЅРґРёСЂСѓСЋС‰РёРµ РїСЂРёС‡РёРЅРµРЅРёРµ РІСЂРµРґР° СЃРµР±Рµ РёР»Рё РѕРєСЂСѓР¶Р°СЋС‰РёРј: СЃРµР»С„С…Р°СЂРј (Р±СѓРєРІР°Р»СЊРЅРѕ
+РїРµСЂРµРІРѕРґРёС‚СЃСЏ РєР°Рє В«РІСЂРµРґ СЃРµР±РµВ»), РїРёРїР»С…РµР№С‚ (РґРІРёР¶РµРЅРёРµ, РїСЂРѕРїР°РіР°РЅРґРёСЂСѓСЋС‰РµРµ РЅРµРЅР°РІРёСЃС‚СЊ Рє Р»СЋРґСЏРј),
+РґРµРїСЂРµСЃСЃРёРІРЅРѕ-СЃСѓРёС†РёРґР°Р»СЊРЅС‹Рµ РіСЂСѓРїРїС‹ (В«СЃРёРЅРёР№ РєРёС‚В» Рё Р°РЅР°Р»РѕРіРёС‡РЅС‹Рµ), Р°РЅРѕСЂРµРєСЃРёСЋ Рё РґСЂ.
 <br>
-• Группы, пропагандирующие нетрадиционные духовно-нравственные ценности: оккультизм,
-сатанизм, чайлдфри, феминизм, нетрадиционные сексуальные отношения, смену пола,
-гендерную идентичность, зоофилию и пр.
+вЂў Р“СЂСѓРїРїС‹, РїСЂРѕРїР°РіР°РЅРґРёСЂСѓСЋС‰РёРµ РЅРµС‚СЂР°РґРёС†РёРѕРЅРЅС‹Рµ РґСѓС…РѕРІРЅРѕ-РЅСЂР°РІСЃС‚РІРµРЅРЅС‹Рµ С†РµРЅРЅРѕСЃС‚Рё: РѕРєРєСѓР»СЊС‚РёР·Рј,
+СЃР°С‚Р°РЅРёР·Рј, С‡Р°Р№Р»РґС„СЂРё, С„РµРјРёРЅРёР·Рј, РЅРµС‚СЂР°РґРёС†РёРѕРЅРЅС‹Рµ СЃРµРєСЃСѓР°Р»СЊРЅС‹Рµ РѕС‚РЅРѕС€РµРЅРёСЏ, СЃРјРµРЅСѓ РїРѕР»Р°,
+РіРµРЅРґРµСЂРЅСѓСЋ РёРґРµРЅС‚РёС‡РЅРѕСЃС‚СЊ, Р·РѕРѕС„РёР»РёСЋ Рё РїСЂ.
 <br>
-• Аниме-сообщества. В отличие от традиционной японской культуры аниме, современные
-аниме могут быть очень опасны, поскольку нередко пропагандируют насилие, сексуальные
-извращения, каннибализм, убийства и самоубийства. По данным исследователей через
-«кровавое аниме» популяризуется даже скулшутинг. Аниме-продукция также является
-лидером по депрессивно-суицидальному контенту. По данным опроса экспертов из числа
-сотрудников подразделений по делам несовершеннолетних органов внутренних дел,
-многие несовершеннолетние, имевшие опыт суицидального поведения, увлекались данной
-субкультурой.
+вЂў РђРЅРёРјРµ-СЃРѕРѕР±С‰РµСЃС‚РІР°. Р’ РѕС‚Р»РёС‡РёРµ РѕС‚ С‚СЂР°РґРёС†РёРѕРЅРЅРѕР№ СЏРїРѕРЅСЃРєРѕР№ РєСѓР»СЊС‚СѓСЂС‹ Р°РЅРёРјРµ, СЃРѕРІСЂРµРјРµРЅРЅС‹Рµ
+Р°РЅРёРјРµ РјРѕРіСѓС‚ Р±С‹С‚СЊ РѕС‡РµРЅСЊ РѕРїР°СЃРЅС‹, РїРѕСЃРєРѕР»СЊРєСѓ РЅРµСЂРµРґРєРѕ РїСЂРѕРїР°РіР°РЅРґРёСЂСѓСЋС‚ РЅР°СЃРёР»РёРµ, СЃРµРєСЃСѓР°Р»СЊРЅС‹Рµ
+РёР·РІСЂР°С‰РµРЅРёСЏ, РєР°РЅРЅРёР±Р°Р»РёР·Рј, СѓР±РёР№СЃС‚РІР° Рё СЃР°РјРѕСѓР±РёР№СЃС‚РІР°. РџРѕ РґР°РЅРЅС‹Рј РёСЃСЃР»РµРґРѕРІР°С‚РµР»РµР№ С‡РµСЂРµР·
+В«РєСЂРѕРІР°РІРѕРµ Р°РЅРёРјРµВ» РїРѕРїСѓР»СЏСЂРёР·СѓРµС‚СЃСЏ РґР°Р¶Рµ СЃРєСѓР»С€СѓС‚РёРЅРі. РђРЅРёРјРµ-РїСЂРѕРґСѓРєС†РёСЏ С‚Р°РєР¶Рµ СЏРІР»СЏРµС‚СЃСЏ
+Р»РёРґРµСЂРѕРј РїРѕ РґРµРїСЂРµСЃСЃРёРІРЅРѕ-СЃСѓРёС†РёРґР°Р»СЊРЅРѕРјСѓ РєРѕРЅС‚РµРЅС‚Сѓ. РџРѕ РґР°РЅРЅС‹Рј РѕРїСЂРѕСЃР° СЌРєСЃРїРµСЂС‚РѕРІ РёР· С‡РёСЃР»Р°
+СЃРѕС‚СЂСѓРґРЅРёРєРѕРІ РїРѕРґСЂР°Р·РґРµР»РµРЅРёР№ РїРѕ РґРµР»Р°Рј РЅРµСЃРѕРІРµСЂС€РµРЅРЅРѕР»РµС‚РЅРёС… РѕСЂРіР°РЅРѕРІ РІРЅСѓС‚СЂРµРЅРЅРёС… РґРµР»,
+РјРЅРѕРіРёРµ РЅРµСЃРѕРІРµСЂС€РµРЅРЅРѕР»РµС‚РЅРёРµ, РёРјРµРІС€РёРµ РѕРїС‹С‚ СЃСѓРёС†РёРґР°Р»СЊРЅРѕРіРѕ РїРѕРІРµРґРµРЅРёСЏ, СѓРІР»РµРєР°Р»РёСЃСЊ РґР°РЅРЅРѕР№
+СЃСѓР±РєСѓР»СЊС‚СѓСЂРѕР№.
 <br>
-<img src="вербовка.jpg">
+<img src="РІРµСЂР±РѕРІРєР°.jpg">
 </p>
 </i>	
 </font>
