--- a/virusi.html
+++ b/virusi.html
@@ -4,55 +4,55 @@
 <body bgcolor=#ccffcc>
 		
 
-<font size=5>
-<i><font color=#ff0011><p align=center><b>Компьютерные вирусы</b></p></font>
-<a href="main.html" target="майн" >назад</a></i>
+<font size=5 face="Verdana">
+<i><font color=#ff0011><p align=center><b>РљРѕРјРїСЊСЋС‚РµСЂРЅС‹Рµ РІРёСЂСѓСЃС‹</b></p></font>
+<a href="main.html" target="РјР°Р№РЅ" >РЅР°Р·Р°Рґ</a></i>
 <p align=justify>
-<b><i><font color=#0011ff>Компьютерный вирус</b></i></font>  - это разновидность компьютерных программ, отличительной особенностью которой является способность к размножению (копированию). В дополнение к этому, вирусы могут повредить или полностью уничтожить все файлы и данные, подконтрольные пользователю, от имени которого была запущена заражённая программа, а также повредить или даже уничтожить операционную систему со всеми файлами в целом. В большинстве случаев распространяются вирусы через интернет.
+<b><i><font color=#0011ff>РљРѕРјРїСЊСЋС‚РµСЂРЅС‹Р№ РІРёСЂСѓСЃ</b></i></font>  - СЌС‚Рѕ СЂР°Р·РЅРѕРІРёРґРЅРѕСЃС‚СЊ РєРѕРјРїСЊСЋС‚РµСЂРЅС‹С… РїСЂРѕРіСЂР°РјРј, РѕС‚Р»РёС‡РёС‚РµР»СЊРЅРѕР№ РѕСЃРѕР±РµРЅРЅРѕСЃС‚СЊСЋ РєРѕС‚РѕСЂРѕР№ СЏРІР»СЏРµС‚СЃСЏ СЃРїРѕСЃРѕР±РЅРѕСЃС‚СЊ Рє СЂР°Р·РјРЅРѕР¶РµРЅРёСЋ (РєРѕРїРёСЂРѕРІР°РЅРёСЋ). Р’ РґРѕРїРѕР»РЅРµРЅРёРµ Рє СЌС‚РѕРјСѓ, РІРёСЂСѓСЃС‹ РјРѕРіСѓС‚ РїРѕРІСЂРµРґРёС‚СЊ РёР»Рё РїРѕР»РЅРѕСЃС‚СЊСЋ СѓРЅРёС‡С‚РѕР¶РёС‚СЊ РІСЃРµ С„Р°Р№Р»С‹ Рё РґР°РЅРЅС‹Рµ, РїРѕРґРєРѕРЅС‚СЂРѕР»СЊРЅС‹Рµ РїРѕР»СЊР·РѕРІР°С‚РµР»СЋ, РѕС‚ РёРјРµРЅРё РєРѕС‚РѕСЂРѕРіРѕ Р±С‹Р»Р° Р·Р°РїСѓС‰РµРЅР° Р·Р°СЂР°Р¶С‘РЅРЅР°СЏ РїСЂРѕРіСЂР°РјРјР°, Р° С‚Р°РєР¶Рµ РїРѕРІСЂРµРґРёС‚СЊ РёР»Рё РґР°Р¶Рµ СѓРЅРёС‡С‚РѕР¶РёС‚СЊ РѕРїРµСЂР°С†РёРѕРЅРЅСѓСЋ СЃРёСЃС‚РµРјСѓ СЃРѕ РІСЃРµРјРё С„Р°Р№Р»Р°РјРё РІ С†РµР»РѕРј. Р’ Р±РѕР»СЊС€РёРЅСЃС‚РІРµ СЃР»СѓС‡Р°РµРІ СЂР°СЃРїСЂРѕСЃС‚СЂР°РЅСЏСЋС‚СЃСЏ РІРёСЂСѓСЃС‹ С‡РµСЂРµР· РёРЅС‚РµСЂРЅРµС‚.
 <br>
-Вирусы имеют следующие вредоносные функции:
-<br>
-
-1. Мешают нормальной работе устройства, замедляют его, а в некоторых случаях повреждают
-даже операционную систему таким образом, что без тщательного ремонта или восстановления,
-пользоваться устройством становится невозможно.
-<br>
-2. Крадут персональные данные пользователя: выгружают данные из системы, включая логины
-и пароли, платежные данные, личные файлы и многое другое.
-<br>
-3. Передают злоумышленникам все, что пользователь печатает на своей клавиатуре
-(«клавиатурные шпионы»).
-<br>
-4. Блокируют устройство с целью шантажа: полностью блокируют работу на устройстве, а для
-разблокировки требуют перевести деньги на указанный счет.
-
-<br>
-5. Используют ваш компьютер для майнинга – добычи криптовалюты. Такие программы,
-проникнув на ваше устройство, используют его мощность для того, чтобы добывать
-криптовалюту. Любые программы-майнеры, как вирусные, так и нет, очень сильно нагружают
-компьютер. Последствием их работы является значительное падение скорости работы
-устройства, перегрев и даже выход из строя отдельных деталей и, в конечном итоге, всего
-устройства.
+Р’РёСЂСѓСЃС‹ РёРјРµСЋС‚ СЃР»РµРґСѓСЋС‰РёРµ РІСЂРµРґРѕРЅРѕСЃРЅС‹Рµ С„СѓРЅРєС†РёРё:
 <br>
 
-<img src="вирусы.jpg">
+1. РњРµС€Р°СЋС‚ РЅРѕСЂРјР°Р»СЊРЅРѕР№ СЂР°Р±РѕС‚Рµ СѓСЃС‚СЂРѕР№СЃС‚РІР°, Р·Р°РјРµРґР»СЏСЋС‚ РµРіРѕ, Р° РІ РЅРµРєРѕС‚РѕСЂС‹С… СЃР»СѓС‡Р°СЏС… РїРѕРІСЂРµР¶РґР°СЋС‚
+РґР°Р¶Рµ РѕРїРµСЂР°С†РёРѕРЅРЅСѓСЋ СЃРёСЃС‚РµРјСѓ С‚Р°РєРёРј РѕР±СЂР°Р·РѕРј, С‡С‚Рѕ Р±РµР· С‚С‰Р°С‚РµР»СЊРЅРѕРіРѕ СЂРµРјРѕРЅС‚Р° РёР»Рё РІРѕСЃСЃС‚Р°РЅРѕРІР»РµРЅРёСЏ,
+РїРѕР»СЊР·РѕРІР°С‚СЊСЃСЏ СѓСЃС‚СЂРѕР№СЃС‚РІРѕРј СЃС‚Р°РЅРѕРІРёС‚СЃСЏ РЅРµРІРѕР·РјРѕР¶РЅРѕ.
 <br>
-<b><i><font color=#0011ff>Меры предосторожности,которые помогут избежать заражения устройства вирусами:</b></i></font>  <br>
-1.Установите Антивирус. Даже бесплатные программы способны отслеживать работу вашего
-устройства и вовремя удалять вирусные программы в случае их появления.
+2. РљСЂР°РґСѓС‚ РїРµСЂСЃРѕРЅР°Р»СЊРЅС‹Рµ РґР°РЅРЅС‹Рµ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ: РІС‹РіСЂСѓР¶Р°СЋС‚ РґР°РЅРЅС‹Рµ РёР· СЃРёСЃС‚РµРјС‹, РІРєР»СЋС‡Р°СЏ Р»РѕРіРёРЅС‹
+Рё РїР°СЂРѕР»Рё, РїР»Р°С‚РµР¶РЅС‹Рµ РґР°РЅРЅС‹Рµ, Р»РёС‡РЅС‹Рµ С„Р°Р№Р»С‹ Рё РјРЅРѕРіРѕРµ РґСЂСѓРіРѕРµ.
 <br>
-2. Не скачивайте файлы из ненадежных источников или сомнительных веб-сайтов. Это может
-привести к установке вредоносного программного обеспечения на ваше устройство.
+3. РџРµСЂРµРґР°СЋС‚ Р·Р»РѕСѓРјС‹С€Р»РµРЅРЅРёРєР°Рј РІСЃРµ, С‡С‚Рѕ РїРѕР»СЊР·РѕРІР°С‚РµР»СЊ РїРµС‡Р°С‚Р°РµС‚ РЅР° СЃРІРѕРµР№ РєР»Р°РІРёР°С‚СѓСЂРµ
+(В«РєР»Р°РІРёР°С‚СѓСЂРЅС‹Рµ С€РїРёРѕРЅС‹В»).
 <br>
-3. Регулярно делайте резервное копирование всех своих важных данных, чтобы в случае
-вирусной атаки вы их не потеряли.
+4. Р‘Р»РѕРєРёСЂСѓСЋС‚ СѓСЃС‚СЂРѕР№СЃС‚РІРѕ СЃ С†РµР»СЊСЋ С€Р°РЅС‚Р°Р¶Р°: РїРѕР»РЅРѕСЃС‚СЊСЋ Р±Р»РѕРєРёСЂСѓСЋС‚ СЂР°Р±РѕС‚Сѓ РЅР° СѓСЃС‚СЂРѕР№СЃС‚РІРµ, Р° РґР»СЏ
+СЂР°Р·Р±Р»РѕРєРёСЂРѕРІРєРё С‚СЂРµР±СѓСЋС‚ РїРµСЂРµРІРµСЃС‚Рё РґРµРЅСЊРіРё РЅР° СѓРєР°Р·Р°РЅРЅС‹Р№ СЃС‡РµС‚.
+
 <br>
-4. Не открывайте письма, присланные с незнакомых адресов. Не скачивайте и не открывайте
-файлы из таких писем или из сообщений, которые прислали вам незнакомые пользователи.
+5. РСЃРїРѕР»СЊР·СѓСЋС‚ РІР°С€ РєРѕРјРїСЊСЋС‚РµСЂ РґР»СЏ РјР°Р№РЅРёРЅРіР° вЂ“ РґРѕР±С‹С‡Рё РєСЂРёРїС‚РѕРІР°Р»СЋС‚С‹. РўР°РєРёРµ РїСЂРѕРіСЂР°РјРјС‹,
+РїСЂРѕРЅРёРєРЅСѓРІ РЅР° РІР°С€Рµ СѓСЃС‚СЂРѕР№СЃС‚РІРѕ, РёСЃРїРѕР»СЊР·СѓСЋС‚ РµРіРѕ РјРѕС‰РЅРѕСЃС‚СЊ РґР»СЏ С‚РѕРіРѕ, С‡С‚РѕР±С‹ РґРѕР±С‹РІР°С‚СЊ
+РєСЂРёРїС‚РѕРІР°Р»СЋС‚Сѓ. Р›СЋР±С‹Рµ РїСЂРѕРіСЂР°РјРјС‹-РјР°Р№РЅРµСЂС‹, РєР°Рє РІРёСЂСѓСЃРЅС‹Рµ, С‚Р°Рє Рё РЅРµС‚, РѕС‡РµРЅСЊ СЃРёР»СЊРЅРѕ РЅР°РіСЂСѓР¶Р°СЋС‚
+РєРѕРјРїСЊСЋС‚РµСЂ. РџРѕСЃР»РµРґСЃС‚РІРёРµРј РёС… СЂР°Р±РѕС‚С‹ СЏРІР»СЏРµС‚СЃСЏ Р·РЅР°С‡РёС‚РµР»СЊРЅРѕРµ РїР°РґРµРЅРёРµ СЃРєРѕСЂРѕСЃС‚Рё СЂР°Р±РѕС‚С‹
+СѓСЃС‚СЂРѕР№СЃС‚РІР°, РїРµСЂРµРіСЂРµРІ Рё РґР°Р¶Рµ РІС‹С…РѕРґ РёР· СЃС‚СЂРѕСЏ РѕС‚РґРµР»СЊРЅС‹С… РґРµС‚Р°Р»РµР№ Рё, РІ РєРѕРЅРµС‡РЅРѕРј РёС‚РѕРіРµ, РІСЃРµРіРѕ
+СѓСЃС‚СЂРѕР№СЃС‚РІР°.
 <br>
-5. Вовремя устанавливайте обновления системы на компьютере или телефоне, обновления
-антивирусной программы, если она у вас установлена. Также обновляйте браузер, которым
-пользуетесь.
+
+<img src="РІРёСЂСѓСЃС‹.jpg">
+<br>
+<b><i><font color=#0011ff>РњРµСЂС‹ РїСЂРµРґРѕСЃС‚РѕСЂРѕР¶РЅРѕСЃС‚Рё,РєРѕС‚РѕСЂС‹Рµ РїРѕРјРѕРіСѓС‚ РёР·Р±РµР¶Р°С‚СЊ Р·Р°СЂР°Р¶РµРЅРёСЏ СѓСЃС‚СЂРѕР№СЃС‚РІР° РІРёСЂСѓСЃР°РјРё:</b></i></font>  <br>
+1.РЈСЃС‚Р°РЅРѕРІРёС‚Рµ РђРЅС‚РёРІРёСЂСѓСЃ. Р”Р°Р¶Рµ Р±РµСЃРїР»Р°С‚РЅС‹Рµ РїСЂРѕРіСЂР°РјРјС‹ СЃРїРѕСЃРѕР±РЅС‹ РѕС‚СЃР»РµР¶РёРІР°С‚СЊ СЂР°Р±РѕС‚Сѓ РІР°С€РµРіРѕ
+СѓСЃС‚СЂРѕР№СЃС‚РІР° Рё РІРѕРІСЂРµРјСЏ СѓРґР°Р»СЏС‚СЊ РІРёСЂСѓСЃРЅС‹Рµ РїСЂРѕРіСЂР°РјРјС‹ РІ СЃР»СѓС‡Р°Рµ РёС… РїРѕСЏРІР»РµРЅРёСЏ.
+<br>
+2. РќРµ СЃРєР°С‡РёРІР°Р№С‚Рµ С„Р°Р№Р»С‹ РёР· РЅРµРЅР°РґРµР¶РЅС‹С… РёСЃС‚РѕС‡РЅРёРєРѕРІ РёР»Рё СЃРѕРјРЅРёС‚РµР»СЊРЅС‹С… РІРµР±-СЃР°Р№С‚РѕРІ. Р­С‚Рѕ РјРѕР¶РµС‚
+РїСЂРёРІРµСЃС‚Рё Рє СѓСЃС‚Р°РЅРѕРІРєРµ РІСЂРµРґРѕРЅРѕСЃРЅРѕРіРѕ РїСЂРѕРіСЂР°РјРјРЅРѕРіРѕ РѕР±РµСЃРїРµС‡РµРЅРёСЏ РЅР° РІР°С€Рµ СѓСЃС‚СЂРѕР№СЃС‚РІРѕ.
+<br>
+3. Р РµРіСѓР»СЏСЂРЅРѕ РґРµР»Р°Р№С‚Рµ СЂРµР·РµСЂРІРЅРѕРµ РєРѕРїРёСЂРѕРІР°РЅРёРµ РІСЃРµС… СЃРІРѕРёС… РІР°Р¶РЅС‹С… РґР°РЅРЅС‹С…, С‡С‚РѕР±С‹ РІ СЃР»СѓС‡Р°Рµ
+РІРёСЂСѓСЃРЅРѕР№ Р°С‚Р°РєРё РІС‹ РёС… РЅРµ РїРѕС‚РµСЂСЏР»Рё.
+<br>
+4. РќРµ РѕС‚РєСЂС‹РІР°Р№С‚Рµ РїРёСЃСЊРјР°, РїСЂРёСЃР»Р°РЅРЅС‹Рµ СЃ РЅРµР·РЅР°РєРѕРјС‹С… Р°РґСЂРµСЃРѕРІ. РќРµ СЃРєР°С‡РёРІР°Р№С‚Рµ Рё РЅРµ РѕС‚РєСЂС‹РІР°Р№С‚Рµ
+С„Р°Р№Р»С‹ РёР· С‚Р°РєРёС… РїРёСЃРµРј РёР»Рё РёР· СЃРѕРѕР±С‰РµРЅРёР№, РєРѕС‚РѕСЂС‹Рµ РїСЂРёСЃР»Р°Р»Рё РІР°Рј РЅРµР·РЅР°РєРѕРјС‹Рµ РїРѕР»СЊР·РѕРІР°С‚РµР»Рё.
+<br>
+5. Р’РѕРІСЂРµРјСЏ СѓСЃС‚Р°РЅР°РІР»РёРІР°Р№С‚Рµ РѕР±РЅРѕРІР»РµРЅРёСЏ СЃРёСЃС‚РµРјС‹ РЅР° РєРѕРјРїСЊСЋС‚РµСЂРµ РёР»Рё С‚РµР»РµС„РѕРЅРµ, РѕР±РЅРѕРІР»РµРЅРёСЏ
+Р°РЅС‚РёРІРёСЂСѓСЃРЅРѕР№ РїСЂРѕРіСЂР°РјРјС‹, РµСЃР»Рё РѕРЅР° Сѓ РІР°СЃ СѓСЃС‚Р°РЅРѕРІР»РµРЅР°. РўР°РєР¶Рµ РѕР±РЅРѕРІР»СЏР№С‚Рµ Р±СЂР°СѓР·РµСЂ, РєРѕС‚РѕСЂС‹Рј
+РїРѕР»СЊР·СѓРµС‚РµСЃСЊ.
 <br>
 
 
